# TinyAPI

./: .gitignore  CMakeLists.txt  LICENSE.md  buildexample.sh  example1.cpp  main.cpp  quickbuild.sh  readme.md  tinyapi.cpp
data/: testdata.json
example/: example_app1.cpp
example/static/: admin.html  index.css  login.html  showcase.css  showcase.html  showcase.js
examples/: example1.cpp
include/: helper.h  request_parser.h  response_handler.h  server_utils.h  tinyapi.h
src/: helper.cpp  request_parser.cpp  response_handler.cpp  tinyapi.cpp
test/: CMakeLists.txt  test1.cpp
